--- a/src/index.css
+++ b/src/index.css
@@ -26,15 +26,17 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #FFC2B1;
-  color: #FFFDFD;
+  /* background-color: #FFC2B1; */
+  /* color: #FFFDFD; */
   cursor: pointer;
   transition: border-color 0.25s;
-}
+} 
+
+
 button:hover {
   border-color: #FF9071;
 }
-button:focus,
+
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
@@ -43,9 +45,6 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
