--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,4 @@
 :root {
-  line-height: 1.4;
-  font-weight: 400;
-
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,8 +9,6 @@
 body {
   background-color: #FFEAEB;
   margin: 0;
-  /* display: flex; */
-  /* place-items: center; */
   min-height: 100vh;
 }
 
@@ -24,7 +17,6 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
   /* background-color: #FFC2B1; */
   /* color: #FFFDFD; */
@@ -41,7 +33,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -49,4 +41,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
